# film-download-app

./: .env.example  .gitignore  CLAUDE.md  README.md  download_film.spec  main.py  pyproject.toml
app/: i18n.py  main.py
app/core/: downloader.py  rezka.py
app/ui/: detail_panel.py  download_panel.py  main_window.py  search_panel.py
app/utils/: settings.py
bot/: config.py  main.py
bot/database/: db.py  models.py
bot/handlers/: admin.py  user.py
bot/keyboards/: inline.py  reply.py
bot/middlewares/: user.py
bot/services/: proxy.py  rezka.py
bot/states/: states.py
docs/superpowers/plans/: 2026-06-22-desktop-app.md  2026-06-22-download-film-bot.md
docs/superpowers/specs/: 2026-06-22-desktop-app-design.md  2026-06-22-download-film-bot-design.md
tests/: test_config.py  test_downloader.py  test_keyboards.py  test_proxy_service.py  test_rezka.py  test_settings.py
