[project]
name = "download-film"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7.0",
    "hdrezkaapi>=11.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
    "pyinstaller>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
